--- a/themes/meme/layouts/partials/components/comments.html
+++ b/themes/meme/layouts/partials/components/comments.html
@@ -1,4 +1,4 @@
-{{ if and (.Params.comments | default .Site.Params.enableComments) (eq hugo.Environment "production") }}
+<!-- {{ if and (.Params.comments | default .Site.Params.enableComments) (eq hugo.Environment "production") }}
     {{ if or (in .Site.Params.mainSections .Section) .Params.comments }}
 
         <div class="load-comments">
@@ -10,7 +10,7 @@
         {{ end }}
 
         {{ if .Site.Params.enableValine }}
-            <div id="vcomments"></div>
+            
         {{ end }}
 
         {{ if .Site.Params.enableUtterances }}
@@ -18,4 +18,25 @@
         {{ end }}
 
     {{ end }}
-{{ end }}
+{{ end }} -->
+<div id="vcomments"></div>
+<script src="'https://unpkg.com/valine/dist/Valine.min.js'">
+    new Valine({
+            el: '#vcomments',
+            appId: '{{ .Site.Params.valineAppId }}',
+            appKey: '{{ .Site.Params.valineAppKey }}',
+            placeholder: '{{ .Site.Params.valinePlaceholder }}',
+            notify: {{ .Site.Params.valineNotify }},
+            verify: {{ .Site.Params.valineVerify }},
+            path: {{ .Site.Params.valinePath | default "location.pathname" | safeJS }},
+            avatar: '{{ .Site.Params.valineAvatar }}',
+            meta: {{ .Site.Params.valineMeta }},
+            pageSize: {{ .Site.Params.valinePageSize }},
+            lang: '{{ .Site.Params.valineLang }}',
+            visitor: {{ .Site.Params.valineVisitor }},
+            highlight: {{ .Site.Params.valineHighlight }},
+            avatarForce: {{ .Site.Params.avatarForce }},
+            recordIP: {{ .Site.Params.valineRecordIP }},
+            serverURLs: '{{ .Site.Params.valineServerURLs }}'
+        });
+</script>
