--- a/themes/meme/layouts/partials/components/comments.html
+++ b/themes/meme/layouts/partials/components/comments.html
@@ -20,7 +20,7 @@
     {{ end }}
 {{ end }} -->
 <div id="vcomments"></div>
-<script src="'https://unpkg.com/valine/dist/Valine.min.js'">
+<script src="https://unpkg.com/valine/dist/Valine.min.js">
     new Valine({
             el: '#vcomments',
             appId: '{{ .Site.Params.valineAppId }}',
