--- a/themes/meme/layouts/partials/components/comments.html
+++ b/themes/meme/layouts/partials/components/comments.html
@@ -1,5 +1,5 @@
-{{ if and (.Params.comments | default .Site.Params.enableComments) (eq hugo.Environment "production") }}
-    {{ if or (in .Site.Params.mainSections .Section) .Params.comments }}
+<!-- {{ if and (.Params.comments | default .Site.Params.enableComments) (eq hugo.Environment "production") }}
+    {{ if or (in .Site.Params.mainSections .Section) .Params.comments }} -->
 
         <div class="load-comments">
             <div id="load-comments">{{ i18n "loadComments" }}</div>
@@ -17,5 +17,6 @@
             <div id="utterances"></div>
         {{ end }}
 
-    {{ end }}
+<!--     {{ end }}
 {{ end }}
+ -->
