--- a/themes/meme/layouts/partials/components/comments.html
+++ b/themes/meme/layouts/partials/components/comments.html
@@ -1,6 +1,6 @@
-<!-- {{ if and (.Params.comments | default .Site.Params.enableComments) (eq hugo.Environment "production") }}
-    {{ if or (in .Site.Params.mainSections .Section) .Params.comments }} -->
-1235
+{{ if and (.Params.comments | default .Site.Params.enableComments) (eq hugo.Environment "production") }}
+    {{ if or (in .Site.Params.mainSections .Section) .Params.comments }}
+
         <div class="load-comments">
             <div id="load-comments">{{ i18n "loadComments" }}</div>
         </div>
@@ -17,6 +17,5 @@
             <div id="utterances"></div>
         {{ end }}
 
-<!--     {{ end }}
+    {{ end }}
 {{ end }}
- -->
